--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DwiseConsultancy | Professional Solutions</title>
+<title>Dwise Consultancy | Professional Solutions</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
@@ -137,7 +137,7 @@ footer{
 
 <header>
   <div class="nav-container">
-    <div class="logo"><i class="fas fa-layer-group"></i> Dwise</div>
+    <div class="logo"><i class="fas fa-layer-group"></i> Dwise Consultancy</div>
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
       <li><a href="#services">Services</a></li>
