--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@ footer{
 
 <header>
   <div class="nav-container">
-    <div class="logo"><i class="fas fa-layer-group"></i> Dwise Consultancy</div>
+   <div class="logo">
+  <img src="logo.png" alt="Dwise Consultancy Logo" class="logo-img">
+  <span>Dwise Consultancy</span>
+</div>
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
       <li><a href="#services">Services</a></li>
