--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ footer{
 <header>
   <div class="nav-container">
    <div class="logo">
-  <img src="logo.png" alt="Dwise Consultancy Logo" class="logo-img">
+  <img src="logo.PNG" alt="Dwise Consultancy Logo" class="logo-img">
   <span>Dwise Consultancy</span>
 </div>
     <ul class="nav-links">
