--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@ footer{
 
 <header>
   <div class="nav-container">
-   <div class="logo">
-  <img src="logo.PNG" alt="Dwise Consultancy Logo" class="logo-img">
-  <span>Dwise Consultancy</span>
-</div>
+    <i class="fas fa-layer-group"></i> Dwise Consultancy
+            </div>
+
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
       <li><a href="#services">Services</a></li>
