--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@ footer{
 
 <header>
   <div class="nav-container">
-    <i class="fas fa-layer-group"></i> Dwise Consultancy
-            </div>
+    <div class="logo"><i class="fas fa-layer-group"></i> Dwise Consultancy</div>
 
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
