--- a/index.html
+++ b/index.html
@@ -137,7 +137,28 @@ footer{
 
 <header>
   <div class="nav-container">
-    <div class="logo"><i class="fas fa-layer-group"></i> Dwise Consultancy</div>
+   <div class="logo">
+  <img src="logo.png" alt="Dwise Consultancy Logo" class="logo-img">
+  Dwise Consultancy
+</div>
+
+<style>
+.logo {
+  display: flex;
+  align-items: center;
+  font-family: 'Arial', sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  color: #2c3e50;
+  gap: 10px; /* space between image and text */
+}
+
+.logo-img {
+  width: 40px;   /* adjust size as needed */
+  height: 40px;
+  object-fit: contain;
+}
+</style>
 
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
